--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../pages/index.css">
+  <link rel="stylesheet" href="../russian-travel/pages/index.css">
   <title>Путешествия по России</title>
 </head>
 
 <body class="page">
   <header class="header">
-    <img class="header__logo" src="../images/header-logo.svg" alt="логотип коня"> <!-- не видна картинка лого-->
+    <img class="header__logo" src="./images/header-logo.svg" alt="логотип коня">
     <a class="header__lang-link">Ru</a>
     <a class="header__lang-link">En</a>
   </header>
@@ -19,7 +19,7 @@
   <section class="lead">
     <h1 class="lead__title">Путешествия по России</h1>
     <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-    <img class="lead__image" src="../images/lead-polka.jpg" alt="женщина на полке">
+    <img class="lead__image" src="./images/lead-polka.jpg" alt="женщина на полке">
     <p class="lead__caption">ваша полка — верхняя</p>
   </section>
 
@@ -41,18 +41,18 @@
   </section>
 
   <section class="photo-grid">
-    <img class="photo-grid__item" src="../images/photo-grid-train.jpg" alt="поезд">
-    <img class="photo-grid__item" src="../images/photo-grid-atharva-tulsi.jpg" alt="облака">
-    <img class="photo-grid__item" src="../images/photo-grid-tuman.jpg" alt="туман">
-    <img class="photo-grid__item" src="../images/photo-grid-sochi.jpg" alt="Сочи">
-    <img class="photo-grid__item" src="../images/photo-grid-arisa.jpg" alt="лёд">
-    <img class="photo-grid__item" src="../images/photo-grid-baikal.jpg" alt="море">
-    <img class="photo-grid__item" src="../images/photo-grid-elbrus.jpg" alt="Эльбрус">
-    <img class="photo-grid__item" src="../images/photo-grid-kondratiev.jpg" alt="Кондратьев">
-    <img class="photo-grid__item" src="../images/photo-grid-kamchatka-1.jpg" alt="Камчатка туман">
-    <img class="photo-grid__item" src="../images/photo-grid-kamchatka-2.jpg" alt="Камчатка">
-    <img class="photo-grid__item" src="../images/photo-grid-baikal-2.jpg" alt="Байкал">
-    <img class="photo-grid__item" src="../images/photo-grid-ergaki.jpg" alt="горы">
+    <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="поезд">
+    <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="облака">
+    <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="туман">
+    <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
+    <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="лёд">
+    <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="море">
+    <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+    <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Кондратьев">
+    <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка туман">
+    <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка">
+    <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал">
+    <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="горы">
   </section>
 
   <section class="places">
@@ -62,7 +62,7 @@
         <p class="place__website__url-heading">URL</p>
         <a href="https://park-kosa.ru" class="place__website__link">park-kosa.ru</a>
       </div>
-      <img class="place__image" src="../images/place-kosa.jpg" alt="куршская коса">
+      <img class="place__image" src="./images/place-kosa.jpg" alt="куршская коса">
       <div class="place__paragraphs">
         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
           спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
@@ -80,7 +80,7 @@
         <h4 class="place__website__url-heading">URL</h4>
         <a href="https://www.nationalgeographic.com/" class="place__website__link">National Geographic</a>
       </div>
-      <img class="place__image" src="../images/place-kolsky.jpg" alt="кольский">
+      <img class="place__image" src="./images/place-kolsky.jpg" alt="кольский">
       <div class="place__paragraphs">
         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
           юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -98,7 +98,7 @@
         <h4 class="place__website__url-heading">URL</h4>
         <a href="" class="place__website__link">YouTube</a>
       </div>
-      <img class="place__image" src="../images/place-altai.jpg" alt="алтай">
+      <img class="place__image" src="./images/place-altai.jpg" alt="алтай">
       <div class="place__paragraphs">
         <p class="place__paragraph">Алтай — одно из красивейших мест в России.
           В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
@@ -116,7 +116,7 @@
         <h4 class="place__website__url-heading">URL</h4>
         <a href="https://vk.com/baikalmile" class="place__website__link">https://vk.com/baikalmile</a>
       </div>
-      <img class="place__image" src="../images/place-winter-baikal.jpg" alt="зимний байкал">
+      <img class="place__image" src="./images/place-winter-baikal.jpg" alt="зимний байкал">
       <div class="place__paragraphs">
         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
           в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
@@ -134,7 +134,7 @@
         <h4 class="place__website__url-heading">URL</h4>
         <a href="http://vodlozero.ru/" class="place__website__link">http://vodlozero.ru/</a>
       </div>
-      <img class="place__image" src="../images/place-karelia.jpg" alt="карелия">
+      <img class="place__image" src="./images/place-karelia.jpg" alt="карелия">
       <div class="place__paragraphs"> <!-- не понятно нужен он тут или нет-->
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
           лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
