--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и
       описали некоторые интересные места, достойные вашего отпуска.</p>
     <ul class="intro__list">
-      <li>Часовых поясов 11</li> <!-- не помогает span цифры все ещё толстые-->
+      <!-- не помогает span цифры все ещё толстые-->
+      <li>Часовых поясов 11</li>
       <li>Объектов природного наследия ЮНЕСКО 12</li>
       <li>Объектов культурного наследия ЮНЕСКО 16</li>
       <li>Природных заповедников 105</li>
