--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <div class="place">
       <h3 class="place__title">Алтай</h3>
       <div class="place__website">
-        <h4 class="place__website__url-heading">URL</h4>
-        <a href="" class="place__website__link">YouTube</a>
+        <h4 class="place__url-heading">URL</h4>
+        <a href="" class="place__link">YouTube</a>
       </div>
       <img class="place__image" src="./images/place-altai.jpg" alt="алтай">
       <div class="place__paragraphs">
@@ -114,8 +114,8 @@
     <div class="place">
       <h3 class="place__title">Зимний Байкал</h3>
       <div class="place__website">
-        <h4 class="place__website__url-heading">URL</h4>
-        <a href="https://vk.com/baikalmile" class="place__website__link">https://vk.com/baikalmile</a>
+        <h4 class="place__url-heading">URL</h4>
+        <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
       </div>
       <img class="place__image" src="./images/place-winter-baikal.jpg" alt="зимний байкал">
       <div class="place__paragraphs">
@@ -132,8 +132,8 @@
     <div class="place">
       <h3 class="place__title">Карелия</h3>
       <div class="place__website">
-        <h4 class="place__website__url-heading">URL</h4>
-        <a href="http://vodlozero.ru/" class="place__website__link">http://vodlozero.ru/</a>
+        <h4 class="place__url-heading">URL</h4>
+        <a href="http://vodlozero.ru/" class="place__link">http://vodlozero.ru/</a>
       </div>
       <img class="place__image" src="./images/place-karelia.jpg" alt="карелия">
       <div class="place__paragraphs"> <!-- не понятно нужен он тут или нет-->
