--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="place">
       <h3 class="place__title">Куршская коса</h3>
       <div class="place__website">
-        <p class="place__website__url-heading">URL</p>
-        <a href="https://park-kosa.ru" class="place__website__link">park-kosa.ru</a>
+        <p class="place__url-heading">URL</p>
+        <a href="https://park-kosa.ru" class="place__link">park-kosa.ru</a>
       </div>
       <img class="place__image" src="./images/place-kosa.jpg" alt="куршская коса">
       <div class="place__paragraphs">
@@ -78,8 +78,8 @@
     <div class="place">
       <h3 class="place__title">Кольский</h3>
       <div class="place__website">
-        <h4 class="place__website__url-heading">URL</h4>
-        <a href="https://www.nationalgeographic.com/" class="place__website__link">National Geographic</a>
+        <h4 class="place__url-heading">URL</h4>
+        <a href="https://www.nationalgeographic.com/" class="place__link">National Geographic</a>
       </div>
       <img class="place__image" src="./images/place-kolsky.jpg" alt="кольский">
       <div class="place__paragraphs">
