--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       описали некоторые интересные места, достойные вашего отпуска.</p>
     <ul class="intro__list">
       <!-- не помогает span-->
-      <li>Часовых поясов 11</li>
-      <li>Объектов природного наследия ЮНЕСКО 12</li>
-      <li>Объектов культурного наследия ЮНЕСКО 16</li>
-      <li>Природных заповедников 105</li>
-      <li>Аэропортов 241</li>
+      <li>Часовых поясов <span class="intro__span-accent">11</span></li>
+      <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
+      <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
+      <li>Природных заповедников <span class="intro__span-accent">105</span></li>
+      <li>Аэропортов <span class="intro__span-accent">241</span></li>
     </ul>
   </section>
 
