--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
 
   <section class="cover">
     <a href="https://stampsy.com/na-elektrichkah-do-baikala" class="cover__overlay" target="_blank" rel="noopener">
-      <h4 class="cover__title">До Байкала «на собаках»</h4>
+      <h2 class="cover__title">До Байкала «на собаках»</h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
       </p>
     </a>
   </section>
 
   <footer class="footer">
-    <div class="footer__container">
+    <!-- <div class="footer__container"> </div> убрали обёртку -->
       <nav class="footer__links">
         <a href="" class="footer__link" target="_blank">Карты</a>
         <a href="" class="footer__link" target="_blank">Погода</a>
@@ -166,7 +166,6 @@
         <a href="" class="footer__link" target="_blank">Путешествия</a>
       </nav>
       <p class="footer__author">© 2023. Шведова Кристина</p>
-    </div>
   </footer>
 </body>
 
