--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body class="page">
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="логотип коня">
-    <a class="header__lang-link">Ru</a>
-    <a class="header__lang-link">En</a>
+    <ul>
+    <li><a href="#" class="header__lang-link">Ru</a></li> <!-- добавить булевый модификатор + стили исправить у списка-->
+    <li><a href="#" class="header__lang-link">En</a></li>
+  </ul>
   </header>
 
   <section class="lead">
