--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- link rel="stylesheet" href="../russian-travel/pages/index.css"> неверно указан путь должен быть pages/имя_файла -->
   <link rel="stylesheet" href="./pages/index.css">
   <title>Путешествия по России</title>
 </head>
@@ -13,10 +12,13 @@
 <body class="page">
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="логотип коня">
-    <ul>
-    <li><a href="#" class="header__lang-link">Ru</a></li> <!-- добавить булевый модификатор + стили исправить у списка-->
-    <li><a href="#" class="header__lang-link">En</a></li>
-  </ul>
+    <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+    <a href="#" class="header__lang-link">En</a>
+    <!-- если делаю списком, ссылки встают в 2 строки, display: inline не помогает
+    <ul class="header__links">
+      <li><a href="#" class="header__lang-link">Ru</a></li>
+      <li><a href="#" class="header__lang-link">En</a></li>
+    </ul> -->
   </header>
 
   <section class="lead">
@@ -35,8 +37,6 @@
       взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и
       описали некоторые интересные места, достойные вашего отпуска.</p>
     <ul class="intro__list">
-      
-      <!-- не помогает span-->
       <li>Часовых поясов <span class="intro__span-accent">11</span></li>
       <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">112</span></li>
       <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
