--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- если делаю списком, ссылки встают в 2 строки, display: inline не помогает
     <ul class="header__links">
       <li><a href="#" class="header__lang-link">Ru</a></li>
-      <li><a href="#" class="header__lang-link">En</a></li>
+      <li><a href="#" class="header__lang-link">En</a></li>sta
     </ul> -->
   </header>
 
