--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="place">
       <h3 class="place__title">Куршская коса</h3>
       <div class="place__website">
-        <p class="place__url-heading">URL</p>
+        <h4 class="place__url-heading">URL</h4>
         <a href="https://park-kosa.ru" class="place__link">park-kosa.ru</a>
       </div>
       <img class="place__image" src="./images/place-kosa.jpg" alt="куршская коса">
