--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <li><a href="#" class="header__lang-link">En</a></li>sta
     </ul> -->
   </header>
-
+  
+<!--
   <section class="lead">
     <h1 class="lead__title">Путешествия по России</h1>
     <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -140,7 +141,8 @@
         <a href="http://vodlozero.ru/" class="place__link">http://vodlozero.ru/</a>
       </div>
       <img class="place__image" src="./images/place-karelia.jpg" alt="карелия">
-      <div class="place__paragraphs"> <!-- не понятно нужен он тут или нет-->
+      <div class="place__paragraphs">
+        не понятно нужен он тут или нет
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
           лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
           национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
@@ -160,7 +162,8 @@
   </section>
 
   <footer class="footer">
-    <!-- <div class="footer__container"> </div> убрали обёртку -->
+    div class="footer__container"> </div> 
+    убрали обёртку
     <nav class="footer__links">
       <a href="" class="footer__link" target="_blank">Карты</a>
       <a href="" class="footer__link" target="_blank">Погода</a>
@@ -170,6 +173,7 @@
     </nav>
     <p class="footer__author">© 2023. Шведова Кристина</p>
   </footer>
+-->
 </body>
 
 </html>
