--- a/index.html
+++ b/index.html
@@ -10,25 +10,29 @@
 </head>
 
 <body class="page">
+  <!--
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="логотип коня">
     <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
     <a href="#" class="header__lang-link">En</a>
-    <!-- если делаю списком, ссылки встают в 2 строки, display: inline не помогает
+    
+    если делаю списком, ссылки встают в 2 строки, display: inline не помогает
     <ul class="header__links">
       <li><a href="#" class="header__lang-link">Ru</a></li>
       <li><a href="#" class="header__lang-link">En</a></li>sta
-    </ul> -->
+    </ul>
   </header>
-  
-<!--
+-->
+
   <section class="lead">
-    <h1 class="lead__title">Путешествия по России</h1>
+    <!-- тег <wbr> указывает браузеру место, где допускается делать перенос строки в тексте чтоб не было скролла -->
+    <h1 class="lead__title">Путе<wbr>шест<wbr>вия по Рос<wbr>сии</h1>
     <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
     <img class="lead__image" src="./images/lead-polka.jpg" alt="женщина на полке">
     <p class="lead__caption">ваша полка — верхняя</p>
   </section>
 
+  <!--
   <section class="intro">
     <h2 class="intro__title">Чего мы там не видели?</h2>
     <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести
