cover без скролла

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
       <li>Аэропортов <span class="intro__span-accent">241</span></li>
     </ul>
   </section>
--->
 
   <section class="photo-grid">
     <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="поезд">
@@ -64,7 +63,6 @@
     <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="горы">
   </section>
 
-  <!--
   <section class="places">
     <div class="place">
       <h3 class="place__title">Куршская коса</h3>
@@ -156,15 +154,19 @@
       </div>
     </div>
   </section>
+-->
 
   <section class="cover">
-    <a href="https://stampsy.com/na-elektrichkah-do-baikala" class="cover__overlay" target="_blank" rel="noopener">
-      <h2 class="cover__title">До Байкала «на собаках»</h2>
+    <!-- target="_blank" rel="noopener" после всего в cover__overlay стояло -->
+    <a href="https://stampsy.com/na-elektrichkah-do-baikala" class="cover__overlay">
+      <!-- тег <wbr> указывает браузеру место, где допускается делать перенос строки в тексте чтоб не было скролла -->
+      <h2 class="cover__title">До Бай<wbr>кала «на соба<wbr>ках»</h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
       </p>
     </a>
   </section>
 
+<!--
   <footer class="footer">
     div class="footer__container"> </div> 
     убрали обёртку
