--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 </head>
 
 <body class="page">
-  <!--
+
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="логотип коня">
     <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
     <a href="#" class="header__lang-link">En</a>
-    
-    если делаю списком, ссылки встают в 2 строки, display: inline не помогает
+  </header>
+
+  <!-- если делаю списком, ссылки встают в 2 строки, display: inline не помогает
     <ul class="header__links">
       <li><a href="#" class="header__lang-link">Ru</a></li>
       <li><a href="#" class="header__lang-link">En</a></li>sta
-    </ul>
-  </header>
+    </ul> -->
 
   <section class="lead">
-   тег <wbr> указывает браузеру место, где допускается делать перенос строки в тексте чтоб не было скролла
+    <!-- тег <wbr> указывает браузеру место, где допускается делать перенос строки в тексте чтоб не было скролла -->
     <h1 class="lead__title">Путе<wbr>шест<wbr>вия по Рос<wbr>сии</h1>
     <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
     <img class="lead__image" src="./images/lead-polka.jpg" alt="женщина на полке">
@@ -144,7 +144,7 @@
       </div>
       <img class="place__image" src="./images/place-karelia.jpg" alt="карелия">
       <div class="place__paragraphs">
-        не понятно нужен он тут или нет
+      <!-- не понятно нужен он тут или нет -->
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
           лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
           национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
@@ -154,7 +154,6 @@
       </div>
     </div>
   </section>
--->
 
   <section class="cover">
     <!-- target="_blank" rel="noopener" после всего в cover__overlay стояло -->
@@ -166,10 +165,9 @@
     </a>
   </section>
 
-<!--
   <footer class="footer">
-    div class="footer__container"> </div> 
-    убрали обёртку
+    <!-- убрали обёртку
+    div class="footer__container"> </div>  -->
     <nav class="footer__links">
       <a href="" class="footer__link" target="_blank">Карты</a>
       <a href="" class="footer__link" target="_blank">Погода</a>
@@ -179,7 +177,7 @@
     </nav>
     <p class="footer__author">© 2023. Шведова Кристина</p>
   </footer>
--->
+
 </body>
 
 </html>
