--- a/index.html
+++ b/index.html
@@ -153,14 +153,13 @@
       </div>
     </div>
   </section>
--->
 
-  <section class="cover"> <!-- z-index = 0 -->
-    <!-- target="_blank" rel="noopener" после всего в cover__overlay стояло -->
-    <a href="https://stampsy.com/na-elektrichkah-do-baikala" class="cover__overlay"> <!-- z-index = 1 затемнение наслаивается на весь блок -->
-      <!-- чтобы работали паддинги обёртку сделали дополнительную-->
+  <section class="cover"> Z-INDEX = 0
+ target="_blank" rel="noopener" после всего в cover__overlay СТОЯЛО
+    <a href="https://stampsy.com/na-elektrichkah-do-baikala" class="cover__overlay"> z-index = 1 затемнение наслаивается на весь БЛОК
+      ЧТОБЫ работали паддинги обёртку сделали дополнительную
       <div class="cover__content">
-        <!-- тег <wbr> указывает браузеру место, где допускается делать перенос строки в тексте чтоб не было скролла -->
+        ТЕГ <wbr> указывает браузеру место, где допускается делать перенос строки в тексте чтоб не было скролла
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.
@@ -168,10 +167,9 @@
       </div>
     </a>
   </section>
+-->
 
-<!--
   <footer class="footer">
-  УБРАЛИ ОБЁРТКУ div class="footer__container"> </div>
     <nav class="footer__links">
       <a href="" class="footer__link" target="_blank">Карты</a>
       <a href="" class="footer__link" target="_blank">Погода</a>
@@ -181,7 +179,7 @@
     </nav>
     <p class="footer__author">© 2023. Шведова Кристина</p>
   </footer>
--->
+
 </body>
 
 </html>
