--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал">
     <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="горы">
   </section>
+-->
 
   <section class="places">
     <div class="place">
@@ -143,7 +144,8 @@
         <a href="http://vodlozero.ru/" class="place__link">http://vodlozero.ru/</a>
       </div>
       <img class="place__image" src="./images/place-karelia.jpg" alt="карелия">
-      <div class="place__paragraphs"> НЕ ПОНЯТНО НУЖЕН ОН ТУТ ИЛИ НЕТ
+      <div class="place__paragraphs"> 
+        <!-- НЕ ПОНЯТНО НУЖЕН ОН ТУТ ИЛИ НЕТ -->
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
           лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
           национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
@@ -154,6 +156,7 @@
     </div>
   </section>
 
+<!--
   <section class="cover"> Z-INDEX = 0
  target="_blank" rel="noopener" после всего в cover__overlay СТОЯЛО
     <a href="https://stampsy.com/na-elektrichkah-do-baikala" class="cover__overlay"> z-index = 1 затемнение наслаивается на весь БЛОК
@@ -167,7 +170,6 @@
       </div>
     </a>
   </section>
--->
 
   <footer class="footer">
     <nav class="footer__links">
@@ -179,6 +181,7 @@
     </nav>
     <p class="footer__author">© 2023. Шведова Кристина</p>
   </footer>
+-->
 
 </body>
 
