--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
       <li><a href="#" class="header__lang-link">Ru</a></li>
       <li><a href="#" class="header__lang-link">En</a></li>sta
     </ul>
+  -->    
 
   <section class="lead">
-    ТЕГ <wbr> указывает браузеру место, где допускается делать перенос строки в тексте чтоб не было СКРОЛЛА
-    <h1 class="lead__title">Путе<wbr>шест<wbr>вия по Рос<wbr>сии</h1>
+    <!-- ТЕГ <wbr> указывает браузеру место, где допускается делать перенос строки в тексте чтоб не было СКРОЛЛА -->
+    <h1 class="lead__title">Путешествия по России</h1>
     <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
     <img class="lead__image" src="./images/lead-polka.jpg" alt="женщина на полке">
     <p class="lead__caption">ваша полка — верхняя</p>
   </section>
--->
 
+ <!--  
   <section class="intro">
     <h2 class="intro__title">Чего мы там не видели?</h2>
     <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести
@@ -49,7 +50,6 @@
     </ul>
   </section>  
 
-<!--
   <section class="photo-grid">
     <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="поезд">
     <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="облака">
