--- a/index.html
+++ b/index.html
@@ -10,29 +10,22 @@
 </head>
 
 <body class="page">
-<!--
+
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="логотип коня">
-    <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
-    <a href="#" class="header__lang-link">En</a>
+    <ul class="header__links">
+      <li><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
+      <li><a href="#" class="header__lang-link">En</a></li>
+    </ul>
   </header>
 
-ЕСЛИ делаю списком, ссылки встают в 2 строки, display: inline не помогает
-    <ul class="header__links">
-      <li><a href="#" class="header__lang-link">Ru</a></li>
-      <li><a href="#" class="header__lang-link">En</a></li>sta
-    </ul>
-  -->    
-
   <section class="lead">
-    <!-- ТЕГ <wbr> указывает браузеру место, где допускается делать перенос строки в тексте чтоб не было СКРОЛЛА -->
     <h1 class="lead__title">Путешествия по России</h1>
     <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
     <img class="lead__image" src="./images/lead-polka.jpg" alt="женщина на полке">
     <p class="lead__caption">ваша полка — верхняя</p>
   </section>
 
- <!--  
   <section class="intro">
     <h2 class="intro__title">Чего мы там не видели?</h2>
     <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести
@@ -48,7 +41,7 @@
       <li>Природных заповедников <span class="intro__span-accent">105</span></li>
       <li>Аэропортов <span class="intro__span-accent">241</span></li>
     </ul>
-  </section>  
+  </section>
 
   <section class="photo-grid">
     <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="поезд">
@@ -156,10 +149,10 @@
     </div>
   </section>
 
-  <section class="cover"> Z-INDEX = 0
- target="_blank" rel="noopener" после всего в cover__overlay СТОЯЛО
-    <a href="https://stampsy.com/na-elektrichkah-do-baikala" class="cover__overlay"> z-index = 1 затемнение наслаивается на весь БЛОК
-      ЧТОБЫ работали паддинги обёртку сделали дополнительную
+  <section class="cover"> <!-- Z-INDEX = 0 -->
+    <a href="https://stampsy.com/na-elektrichkah-do-baikala" class="cover__overlay">
+      <!-- z-index = 1 затемнение наслаивается на весь БЛОК -->
+      <!-- ЧТОБЫ работали паддинги обёртку сделали дополнительную -->
       <div class="cover__content">
         ТЕГ <wbr> указывает браузеру место, где допускается делать перенос строки в тексте чтоб не было скролла
         <h2 class="cover__title">До Байкала «на собаках»</h2>
@@ -180,7 +173,6 @@
     </nav>
     <p class="footer__author">© 2023. Шведова Кристина</p>
   </footer>
--->
 
 </body>
 
